# deltafs-shuffle

./: CMakeLists.txt  LICENSE  README.md
include/deltafs-shuffle/: shufapi.h  shuffle_api.h
src/: CMakeLists.txt  acnt_wrap.h  deltafs-shuffle-config.cmake.in  shufapi.cc  shuffle.cc  shuffle_internal.cc  shuffle_internal.h  xqueue.h
src/shuffler/: .gitrepo
